Build grid layout

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <p>testing</p>
+        </div>
+        <div class="sidebar">
+            <p>testing</p>
+        </div>
+        <div class="main-content">
+            <p>testing</p>
+        </div>
+    </div>
 </body>
 </html>
