--- a/index.html
+++ b/index.html
@@ -12,7 +12,50 @@
             <p>testing</p>
         </div>
         <div class="sidebar">
-            <p>testing</p>
+            <div class="card">
+                <img src="" alt="dashboard logo">
+                <div class="sidebar-heading">Dashboard</div>
+            </div>
+            <div class="sidebar-content">
+                <div class="card">
+                    <img src="" alt="logo">
+                    <div class="sidebar-subheading">Home</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="profile icon">
+                    <div class="sidebar-subheading">Profile</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="message icon">
+                    <div class="sidebar-subheading">Messages</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="history icon">
+                    <div class="sidebar-subheading">History</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="tasks icon">
+                    <div class="sidebar-subheading">Tasks</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="communities icon">
+                    <div class="sidebar-subheading">Communities</div>
+                </div>
+            </div>
+            <div class="sidebar-footer">
+                <div class="card">
+                    <img src="" alt="settings icon">
+                    <div class="sidebar-subheading">Settings</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="support icon">
+                    <div class="sidebar-subheading">Support</div>
+                </div>
+                <div class="card">
+                    <img src="" alt="privacy icon">
+                    <div class="sidebar-subheading">Privacy</div>
+                </div>
+            </div>
         </div>
         <div class="main-content">
             <p>testing</p>
