--- a/index.html
+++ b/index.html
@@ -4,55 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+      </style>
     <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <p>testing</p>
+            <div class="search-container">
+                <img src="./images/magnify.svg" alt="searchbar icon">
+                <div class="searchbar"></div>
+            </div>
+            <div class="profile-icons">
+                <img src="./images/bell-outline.svg" alt="bell icon">
+                <img src="./images/dragon-pfp.jpg" alt="profile-picture" id="pfp-small">
+                <div class="profile-name">Yellow Dragoon</div>
+            </div>
+            <div class="profile-greeting">
+                <img src="./images/dragon-pfp.jpg" alt="profile-picture" id="pfp-large">
+                <div class="greeting-container">
+                    <div class="greeting-small">Hi there,</div>
+                    <div class="greeting-large">Yellow Dragoon (@ydragoon)</div>
+                </div>
+            </div>
+            <div class="profile-buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
         <div class="sidebar">
             <div class="card">
-                <img src="" alt="dashboard logo">
+                <img src="./images/unicorn-variant.svg" alt="dashboard logo" id="top-logo">
                 <div class="sidebar-heading">Dashboard</div>
             </div>
             <div class="sidebar-content">
                 <div class="card">
-                    <img src="" alt="logo">
+                    <img src="./images/home-account.svg" alt="logo">
                     <div class="sidebar-subheading">Home</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="profile icon">
+                    <img src="./images/card-account-details.svg" alt="profile icon">
                     <div class="sidebar-subheading">Profile</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="message icon">
+                    <img src="./images/message.svg" alt="message icon">
                     <div class="sidebar-subheading">Messages</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="history icon">
+                    <img src="./images/history.svg" alt="history icon">
                     <div class="sidebar-subheading">History</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="tasks icon">
+                    <img src="./images/calendar-check.svg" alt="tasks icon">
                     <div class="sidebar-subheading">Tasks</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="communities icon">
+                    <img src="./images/account-group.svg" alt="communities icon">
                     <div class="sidebar-subheading">Communities</div>
                 </div>
             </div>
             <div class="sidebar-footer">
                 <div class="card">
-                    <img src="" alt="settings icon">
+                    <img src="./images/cog.svg" alt="settings icon">
                     <div class="sidebar-subheading">Settings</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="support icon">
+                    <img src="./images/help-box-multiple.svg" alt="support icon">
                     <div class="sidebar-subheading">Support</div>
                 </div>
                 <div class="card">
-                    <img src="" alt="privacy icon">
+                    <img src="./images/shield-account.svg" alt="privacy icon">
                     <div class="sidebar-subheading">Privacy</div>
                 </div>
             </div>
