--- a/index.html
+++ b/index.html
@@ -81,7 +81,137 @@
             </div>
         </div>
         <div class="main-content">
-            <p>testing</p>
+            <div class="projects">
+                <h2>Your Projects</h2>
+                <div class="project-cards">
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel enim vel enim porttitor tincidunt. Nullam nec rutrum enim, eu commodo libero. Mauris pretium tincidunt ante, ut dapibus leo dapibus id. In augue eros, sagittis sed augue at, varius congue tortor.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./images/star-plus-outline.svg" alt="star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./images/share-variant-outline.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel enim vel enim porttitor tincidunt. Nullam nec rutrum enim, eu commodo libero. Mauris pretium tincidunt ante, ut dapibus leo dapibus id. In augue eros, sagittis sed augue at, varius congue tortor.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./images/star-plus-outline.svg" alt="star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./images/share-variant-outline.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel enim vel enim porttitor tincidunt. Nullam nec rutrum enim, eu commodo libero. Mauris pretium tincidunt ante, ut dapibus leo dapibus id. In augue eros, sagittis sed augue at, varius congue tortor.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./images/star-plus-outline.svg" alt="star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./images/share-variant-outline.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel enim vel enim porttitor tincidunt. Nullam nec rutrum enim, eu commodo libero. Mauris pretium tincidunt ante, ut dapibus leo dapibus id. In augue eros, sagittis sed augue at, varius congue tortor.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./images/star-plus-outline.svg" alt="star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./images/share-variant-outline.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel enim vel enim porttitor tincidunt. Nullam nec rutrum enim, eu commodo libero. Mauris pretium tincidunt ante, ut dapibus leo dapibus id. In augue eros, sagittis sed augue at, varius congue tortor.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./images/star-plus-outline.svg" alt="star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./images/share-variant-outline.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel enim vel enim porttitor tincidunt. Nullam nec rutrum enim, eu commodo libero. Mauris pretium tincidunt ante, ut dapibus leo dapibus id. In augue eros, sagittis sed augue at, varius congue tortor.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./images/star-plus-outline.svg" alt="star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./images/share-variant-outline.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel enim vel enim porttitor tincidunt. Nullam nec rutrum enim, eu commodo libero. Mauris pretium tincidunt ante, ut dapibus leo dapibus id. In augue eros, sagittis sed augue at, varius congue tortor.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./images/star-plus-outline.svg" alt="star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./images/share-variant-outline.svg" alt="share icon">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <div class="card-text">
+                            <h3>Super Cool Project</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque vel enim vel enim porttitor tincidunt. Nullam nec rutrum enim, eu commodo libero. Mauris pretium tincidunt ante, ut dapibus leo dapibus id. In augue eros, sagittis sed augue at, varius congue tortor.</p>
+                        </div>
+                        <div class="card-icons">
+                            <img src="./images/star-plus-outline.svg" alt="star icon">
+                            <img src="./images/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./images/share-variant-outline.svg" alt="share icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <h2>Announcements</h2>
+                <div class="announcement-card">
+                    <h3>Site Maintenance</h3>
+                    <p>Integer sagittis urna vitae velit tristique semper. Etiam dapibus leo sit amet viverra mattis. Nullam suscipit consectetur odio, vel viverra erat pretium ut.</p>
+                    <hr>
+                    <h3>Site Maintenance</h3>
+                    <p>Integer sagittis urna vitae velit tristique semper. Etiam dapibus leo sit amet viverra mattis. Nullam suscipit consectetur odio, vel viverra erat pretium ut.</p>
+                    <hr>
+                    <h3>Site Maintenance</h3>
+                    <p>Integer sagittis urna vitae velit tristique semper. Etiam dapibus leo sit amet viverra mattis. Nullam suscipit consectetur odio, vel viverra erat pretium ut.</p>
+                </div>
+            </div>
+            <div class="trending">
+                <h2>Trending</h2>
+                <div class="trending-container">
+                    <div class="trending-card">
+                        <img src="./images/dragon-pfp.jpg" alt="profile-icon">
+                        <div class="tag">@tegan</div>
+                        <div class="tagline">World Peace Builder</div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="./images/dragon-pfp.jpg" alt="profile-icon">
+                        <div class="tag">@tegan</div>
+                        <div class="tagline">World Peace Builder</div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="./images/dragon-pfp.jpg" alt="profile-icon">
+                        <div class="tag">@tegan</div>
+                        <div class="tagline">World Peace Builder</div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="./images/dragon-pfp.jpg" alt="profile-icon">
+                        <div class="tag">@tegan</div>
+                        <div class="tagline">World Peace Builder</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
